Add Message entity to API
